--- a/src/components/usbVerification.module.css
+++ b/src/components/usbVerification.module.css
@@ -73,8 +73,29 @@
     }
 }
 
+/* Define the fade-out animation */
+@keyframes fadeOut {
+    from {
+      opacity: 1;
+    }
+    to {
+      opacity: 0;
+    }
+  }
+  
+/* Define the minimize animation */
+@keyframes minimize {
+    from {
+        transform: scale(1);
+    }
+    to {
+        transform: scale(0);
+    }
+  }
+
 .usbPopup1{
     display: flex;
+    width: 85%;
     flex-direction: row;
     align-items: center;
     justify-content: center;
@@ -82,28 +103,22 @@
     animation: fadeIn 1s ease forwards;
 }
 
-.usbPopup2{
+
+.usbFadeout{
     display: flex;
+    width: 85%;
     flex-direction: row;
     align-items: center;
     justify-content: center;
 
-    animation: fadeIn 1s ease forwards;
-}
+    animation: fadeOut 1s ease forwards;
 
-.usbPopup3{
-    display: flex;
-    flex-direction: row;
-    align-items: center;
-    justify-content: center;
-
-    animation: fadeIn 1s ease forwards;
 }
 
 .hide{
     height:5em;
     position:relative;
-    transform: scale(0);
+    /* transform: scale(0); */
     display: none;
     animation: fadeOut 1s ease forwards;
 }
@@ -119,7 +134,7 @@
     
 }
 .text2{
-    
+    text-align: center;
     text-shadow: 
     /* -1px -1px 5px rgb(187, 190, 190),   */
     1px -1px 5px rgb(164, 168, 168),
@@ -131,7 +146,7 @@
 }
 
 .text3{
-    
+    text-align: center;
     text-shadow: 
     /* -1px -1px 5px rgb(187, 190, 190),   */
     1px -1px 5px rgb(164, 168, 168),
@@ -143,7 +158,7 @@
 }
 
 .text4{
-    
+    text-align: center;
     text-shadow: 
     /* -1px -1px 5px rgb(187, 190, 190),   */
     1px -1px 5px rgb(255, 220, 220),
@@ -155,25 +170,7 @@
     
 }
 
-/* Define the fade-out animation */
-@keyframes fadeOut {
-    from {
-      opacity: 1;
-    }
-    to {
-      opacity: 0;
-    }
-  }
-  
-  /* Define the minimize animation */
-  @keyframes minimize {
-    from {
-      transform: scale(1);
-    }
-    to {
-      transform: scale(0);
-    }
-  }
+
 
 /* Define the transition for the window */
 #app {
