--- a/src/components/home.module.css
+++ b/src/components/home.module.css
@@ -1,36 +1,12 @@
 .container {
+    position: relative;
     display: flex;   
-    width: 100vw;
-    height: 100vh;
+    width: 100%;
+    height: 93%;
+    -webkit-app-region: no-drag;
 }
 
-.window-interactions {
-    display: flex;
-    justify-content: flex-start;
-    flex-direction: row;
-    position: absolute;
-    top: 0;
-    right: 0;
-}
 
-.window-interactions > * {
-    transition: 300ms;
-    height: fit-content;
-}
-
-.window-interactions > .minimize:hover {
-    background-color: #eee;
-}
-
-.window-interactions > .close:hover {
-    background-color: #dc2626;
-    color: #fff;
-}
-
-.window-interact-icon {
-    height: 1.5rem;
-    width: 1.5rem;
-}
 
 .feature-list-aside {
     display: flex;
@@ -41,6 +17,7 @@
     min-width: 20rem;
     padding: 1rem;
     border-right: solid 1px #eee;
+    -webkit-app-region: no-drag;
 }
 
 .application-title {
@@ -69,7 +46,8 @@
 }
 
 .feature-list > li > button.selected {
-    background: #2563eb;
+    background-color: #39c5bb;
+    /* background: #2563eb; */
     color: #fff;
 }
 
@@ -79,7 +57,7 @@
 
 .feature-list > li > button {
     display: flex;
-    flex-dircection: row;
+    flex-direction: row;
     align-items: center;
 
     padding: 0.75rem;
@@ -101,8 +79,10 @@
 }
 
 .user-info {
+    position:relative;
     width: 100%;
     padding: 0.75rem 1rem;
+    bottom: -3em;
     display: flex;
     flex-direction: row;
     align-items: center;
