--- a/src/components/loginform.module.css
+++ b/src/components/loginform.module.css
@@ -9,63 +9,20 @@
     src: url("../fonts/RolexLight.woff2"); 
 }
 
-.page{
-    height: 100vh;
-    width: 100%;
-    display: flex;
-    justify-content: center;
-    align-items: center;
-    background-color: transparent;
-    -webkit-app-region: no-drag;
-}
 
 
 
-.buttons{
-    position: absolute;
-    top: 0;
-    right: 0;
-    display: flex;
-    justify-content: space-around;
-    width: 25%;
-    padding-right: 0;
-    padding-top: 1.5%;
-    flex-direction: row;
-    background-color: transparent;
-    z-index: 9999;
-    -webkit-app-region: no-drag;
-    /* background-color:rgb(156, 156, 156) */
-    
-}
 
-.buttons #minimize, .buttons #close{
-    margin-left: '5px';
-    /* background-color: #39c5bb; */
-    font-size: 1.2em;
-    font-weight: bold;
-    width: 30%;
-    color: #39c5bb;
-    transition: 0.3s;
-    cursor: pointer;
-    -webkit-app-region: no-drag;
-    
-} 
 
-.buttons #minimize:hover{
-    transform: scale(1.3);
-    color:#46ece1
-}
-.buttons #close:hover{
-    transform: scale(1.3);
-    color: #FF0000;
-}
-.cover{
-    background-color: white;
+
+.content{
+    /* background-color: white; */
+    display: none;
     width: 30em;
-    height: 35em;
+    height: 32em;
     position: relative;
-    border-radius: 1em;
-    box-shadow: 0 0.0188em 1.550em rgb(156, 156, 156);
+    /* border-radius: 1em; */
+    /* box-shadow: 0 0.0188em 1.550em rgb(156, 156, 156); */
     display: flex;
     flex-direction: column;
     align-items: center;
@@ -141,6 +98,7 @@ input:focus {
 }
 
 .signupText {
+    height: 1em;
     font-size: .8em;
     -webkit-app-region: no-drag;
 }
@@ -152,7 +110,7 @@ input:focus {
 
 .text {
     position: relative;
-    bottom: -2em;
+    bottom: -1em;
 }
 .hide{
     position: relative;
@@ -218,17 +176,3 @@ input:focus {
       transform: scale(0);
     }
   }
-/* Define the transition for the window */
-#app {
-    transition: opacity 0.2s, transform 0.2s;
-}
-  
-/* Define the transition for the minimize animation */
-#app.minimized {
-    animation: minimize 0.2s ease forwards;
-}
-
-/* Define the transition for the close animation */
-#app.close {
-    animation: fadeOut 0.2s ease forwards;
-}
