--- a/src/index.css
+++ b/src/index.css
@@ -7,6 +7,150 @@ body {
   -moz-osx-font-smoothing: grayscale;
 }
 
+.container{
+  height: 100vh;
+  width: 100%;
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  background-color: transparent;
+  -webkit-app-region: no-drag;
+}
+
+.buttons{
+  position: absolute;
+  
+  top: -0.5em;
+  right: 0.3em;
+  display: flex;
+  justify-content: space-around;
+  width: 10em;
+  padding-right: 0;
+  padding-top: 1.5%;
+  flex-direction: row;
+  background-color: transparent;
+  z-index: 9000;
+  -webkit-app-region: no-drag;
+  /* background-color:rgb(156, 156, 156) */
+  
+}
+
+.buttons #minimize, .buttons #close, .buttons #maximize{
+  position: relative;
+  /* background-color: aquamarine; */
+
+  /* margin-left: '1em'; */
+  /* background-color: #39c5bb; */
+  /* font-size: 1.2em; */
+  font-weight: bold;
+  width: 30%;
+  color: #39c5bb;
+  transition: 0.3s;
+  cursor: pointer;
+  z-index: 9999;
+  -webkit-app-region: no-drag;
+  
+} 
+
+.buttons #minimize:hover{
+
+  transform: scale(1.3);
+  color:#46ece1;
+  -webkit-app-region: no-drag;
+}
+.buttons #maximize:hover{
+  
+  transform: scale(1.3);
+  color:#46ece1
+}
+.buttons #close:hover{
+  transform: scale(1.2);
+  color: #FF0000;
+  -webkit-app-region: no-drag;
+}
+
+
+.cover{
+  background-color: white;
+  width: 100%;
+  height: 100%;
+  position: relative;
+  border-radius: 1em;
+  /* box-shadow: 0 0.0188em 1.350em rgb(156, 156, 156); */
+  display: flex;
+  flex-direction: column;
+  align-items: center;
+  justify-content: space-around;
+  -webkit-app-region: drag;
+}
+
+.loginCover{
+  background-color: white;
+  width: 30em;
+  height: 35em;
+  position: relative;
+  border-radius: 1em;
+  box-shadow: 0 0.0188em 1.350em rgb(156, 156, 156);
+  display: flex;
+  flex-direction: column;
+  align-items: center;
+  justify-content: space-around;
+  -webkit-app-region: drag;
+}
+
+@keyframes fadeIn {
+  from {
+    opacity: 0;
+  }
+  to {
+    opacity: 1;
+  }
+}
+
+/* Define the fade-out animation */
+@keyframes fadeOut {
+  from {
+    opacity: 1;
+  }
+  to {
+    opacity: 0;
+  }
+}
+
+/* Define the minimize animation */
+@keyframes minimize {
+  from {
+      transform: scale(1);
+  }
+  to {
+      transform: scale(0);
+  }
+}
+
+
+
+/* Define the transition for the minimize animation */
+#app.minimized {
+  animation: minimize 0.2s ease forwards;
+}
+
+/* Define the transition for the close animation */
+#app.closed {
+  animation: fadeOut 0.2s ease forwards;
+}
+
+#app.maximized{
+  transition: all 0.15s ease;
+  width: 100vw;
+  height: 100vh;}
+
+  #app.unmaximized {
+    transition: all 0.15s ease;
+    width: 800px; /* Replace with your original width */
+    height: 600px; /* Replace with your original height */
+  }
+
+
 code {
   font-family: source-code-pro, Menlo, Monaco, Consolas, 'Courier New',
     monospace;
