--- a/src/index.css
+++ b/src/index.css
@@ -41,7 +41,7 @@ body {
 
   /* margin-left: '1em'; */
   /* background-color: #39c5bb; */
-  /* font-size: 1.2em; */
+  font-size: 1.2em;
   font-weight: bold;
   width: 30%;
   color: #39c5bb;
@@ -55,16 +55,16 @@ body {
 .buttons #minimize:hover{
 
   transform: scale(1.3);
-  color:#46ece1;
+  color:#2f6df1;
   -webkit-app-region: no-drag;
 }
 .buttons #maximize:hover{
   
   transform: scale(1.3);
-  color:#46ece1
+  color:#eeb437
 }
 .buttons #close:hover{
-  transform: scale(1.2);
+  transform: scale(1.3);
   color: #FF0000;
   -webkit-app-region: no-drag;
 }
@@ -127,6 +127,11 @@ body {
   }
 }
 
+#app{
+  align-items: center;
+  justify-content: center;
+  display: flex
+}
 
 
 /* Define the transition for the minimize animation */
@@ -140,14 +145,16 @@ body {
 }
 
 #app.maximized{
+  position: absolute;
   transition: all 0.15s ease;
   width: 100vw;
   height: 100vh;}
 
   #app.unmaximized {
+    position: relative;
     transition: all 0.15s ease;
-    width: 800px; /* Replace with your original width */
-    height: 600px; /* Replace with your original height */
+    width: var(--dynamic-width); /* Replace with your original width */
+    height: var(--dynamic-height); /* Replace with your original height */
   }
 
 
