--- a/src/index.css
+++ b/src/index.css
@@ -1,3 +1,9 @@
+html {
+  --titlebar-padding: 0.5rem;
+  --titlebar-icon-size: 1rem;
+  --titlebar-height: calc(2 * var(--titlebar-padding) + var(--titlebar-icon-size));
+}
+
 body {
   margin: 0;
   font-family: -apple-system, BlinkMacSystemFont, 'Segoe UI', 'Roboto', 'Oxygen',
@@ -9,7 +15,7 @@ body {
 
 .container{
   height: 100vh;
-  width: 100%;
+  width: 100vw;
   display: flex;
   justify-content: center;
   align-items: center;
@@ -20,49 +26,40 @@ body {
 .buttons{
   position: absolute;
   
-  top: -0.5em;
-  right: 0.3em;
+  top: 0;
+  right: 0.125rem;
   display: flex;
-  justify-content: space-around;
-  width: 10em;
-  padding-right: 0;
-  padding-top: 1.5%;
   flex-direction: row;
+  padding: var(--titlebar-padding);
+
   background-color: transparent;
   z-index: 9000;
   -webkit-app-region: no-drag;
-  /* background-color:rgb(156, 156, 156) */
-  
 }
 
-.buttons #minimize, .buttons #close, .buttons #maximize{
-  position: relative;
-  /* background-color: aquamarine; */
-
-  /* margin-left: '1em'; */
-  /* background-color: #39c5bb; */
-  font-size: 1.2em;
-  font-weight: bold;
-  width: 30%;
-  color: #39c5bb;
-  transition: 0.3s;
+.buttons > * {
   cursor: pointer;
-  z-index: 9999;
-  -webkit-app-region: no-drag;
-  
+  width: var(--titlebar-icon-size);
+  height: var(--titlebar-icon-size);
+
+  transition: 250ms ease;
 } 
 
-.buttons #minimize:hover{
+.buttons > * + * {
+  margin-left: 1rem;
+}
 
+.buttons > #minimize:hover{
   transform: scale(1.3);
-  color:#2f6df1;
+  color: #2f6df1;
   -webkit-app-region: no-drag;
 }
+
 .buttons #maximize:hover{
-  
   transform: scale(1.3);
-  color:#eeb437
+  color: #eeb437
 }
+
 .buttons #close:hover{
   transform: scale(1.3);
   color: #FF0000;
@@ -99,32 +96,32 @@ body {
 }
 
 @keyframes fadeIn {
-  from {
-    opacity: 0;
-  }
-  to {
-    opacity: 1;
-  }
+from {
+  opacity: 0;
+}
+to {
+  opacity: 1;
+}
 }
 
 /* Define the fade-out animation */
 @keyframes fadeOut {
-  from {
-    opacity: 1;
-  }
-  to {
-    opacity: 0;
-  }
+from {
+  opacity: 1;
+}
+to {
+  opacity: 0;
+}
 }
 
 /* Define the minimize animation */
 @keyframes minimize {
-  from {
-      transform: scale(1);
-  }
-  to {
-      transform: scale(0);
-  }
+from {
+  transform: scale(1);
+}
+to {
+  transform: scale(0);
+}
 }
 
 #app{
@@ -150,12 +147,12 @@ body {
   width: 100vw;
   height: 100vh;}
 
-  #app.unmaximized {
-    position: relative;
-    transition: all 0.15s ease;
-    width: var(--dynamic-width); /* Replace with your original width */
-    height: var(--dynamic-height); /* Replace with your original height */
-  }
+#app.unmaximized {
+  position: relative;
+  transition: all 0.15s ease;
+  width: var(--dynamic-width); /* Replace with your original width */
+  height: var(--dynamic-height); /* Replace with your original height */
+}
 
 
 code {
