home page is now draggable

--- a/src/components/home.module.css
+++ b/src/components/home.module.css
@@ -15,6 +15,11 @@
     min-width: 20rem;
     padding: 1rem;
     border-right: solid 1px #eee;
+
+    -webkit-app-region: drag;
+}
+
+.feature-list, .user-info {
     -webkit-app-region: no-drag;
 }
 
@@ -145,8 +150,11 @@
     justify-content: space-between;
     align-items: center;
 
-    padding: var(--titlebar-height) 1rem 0.5rem 2rem;
+    margin-top: var(--titlebar-height);
+    padding: 0 1rem 0.5rem 2rem;
     border-bottom: solid 1px #eee;
+
+    -webkit-app-region: drag;
 }
 
 .persona-dropdown, .persona-dropdown:hover {
@@ -158,6 +166,8 @@
     background: transparent;
 
     cursor: pointer;
+
+    -webkit-app-region: no-drag;
 }
 
 .persona-dropdown > img {
