--- a/src/components/home.module.css
+++ b/src/components/home.module.css
@@ -105,6 +105,7 @@
 
 .user-info:hover .menu-icon {
     display: block;
+    cursor: pointer;
 }
 
 .user-info > .left {
@@ -142,6 +143,7 @@
     width: 100%;
     height: 100%;
     display: flex;
+    -webkit-app-region: no-drag;
     flex-direction: column;
 }
 
@@ -149,7 +151,6 @@
     display: flex;
     justify-content: space-between;
     align-items: center;
-
     margin-top: var(--titlebar-height);
     padding: 0 1rem 0.5rem 2rem;
     border-bottom: solid 1px #eee;
@@ -311,3 +312,32 @@
 .persona-list > .persona-item-selected > .persona-item-name {
     font-weight: bold;
 }
+
+
+.context-menu {
+    /* display: none; */
+    position: absolute;
+    border-radius: 0.3em;
+    background-color: white;
+    padding: 0;
+    list-style: none;
+    border: 1px solid #ccc;
+    box-shadow: 2px 2px 6px rgba(0, 0, 0, 0.3);
+    
+    /* z-index: 500000; */
+  }
+  
+  .context-menu li {
+    padding: 5px 10px;
+    font-family: 'sans-serif';
+    cursor: pointer;
+    z-index: 9999;
+  }
+  
+  .context-menu li:hover {
+    background-color: #ddd;
+  }
+
+
+
+
