--- a/src/index.css
+++ b/src/index.css
@@ -28,8 +28,7 @@ body {
   display: flex;
   justify-content: flex-end;
   -webkit-app-region: drag; 
-  
-  position: absolute;
+  position: relative;
   top: 0;
   left: 0;
   right: 0;
@@ -84,6 +83,7 @@ body {
   height: 100%;
   position: relative;
   border-radius: 1em;
+  border: 1px solid black;
   /* box-shadow: 0 0.0188em 1.350em rgb(156, 156, 156); */
   display: flex;
   flex-direction: column;
