--- a/src/components/home.module.css
+++ b/src/components/home.module.css
@@ -221,11 +221,11 @@
 
 @keyframes blur {
     0%{
-        backdrop-filter: blur(0px)
+        opacity: 0;
     }      
     
     100% {
-        backdrop-filter: blur(18px)
+        opacity: 1;
     }
   }
 
@@ -264,6 +264,7 @@
     justify-content: center;
     align-items: center;
     opacity: 1;
+    backdrop-filter: blur(18px);
     animation: blur 500ms ease forwards;
 }
 
