--- a/react-app/src/components/Titlebar.css
+++ b/react-app/src/components/Titlebar.css
@@ -48,9 +48,46 @@
     -webkit-app-region: no-drag;
 }
 
-.titlebar > #toggle-dev-tools {
+.titlebar > #open-dev-menu:hover {
     transform: scale(1.3);
-    color: #FF0000;
     -webkit-app-region: no-drag;
 }
 
+.titlebar > .dev-menu {
+    position: fixed;
+    right: 0;
+    left: 0;
+    top: 0;
+    bottom: 0;
+    display: flex;
+    backdrop-filter: brightness(0.5);
+
+    padding: 10rem;
+    margin: 0;
+
+    -webkit-app-region: no-drag;
+}
+
+.titlebar > .dev-menu > .dev-menu-content {
+    background: #fff;
+    border-radius: 0.5rem;
+    width: 100%;
+    height: 100%;
+    box-shadow: 0 0 0.5rem 0.25rem #0001;
+    padding: 1rem 2rem;
+
+    overflow-y: auto;
+
+    -webkit-app-region: no-drag;
+}
+
+.titlebar > .dev-menu > .dev-menu-content > * + * {
+    margin-top: 1rem;
+}
+
+.titlebar > .dev-menu > .dev-menu-content input {
+    padding: 0;
+    border: initial;
+    height: initial;
+    width: initial;
+}
