--- a/react-app/src/components/loginform.module.css
+++ b/react-app/src/components/loginform.module.css
@@ -13,7 +13,12 @@
 
 
 
-
+.container{
+    position: relative;
+    align-items: center;
+    display: flex;
+    height: 100%;
+}
 
 .content{
     /* background-color: white; */
