--- a/react-app/src/components/Titlebar.css
+++ b/react-app/src/components/Titlebar.css
@@ -1,27 +1,32 @@
 .titlebar {
-    position: absolute;
+    position: relative;
     top: 0;
     right: 0;
-    top: 0;
-    right: 0.125rem;
+    width: 100%;
+    height: 5%;
+
+    /* top: 0;
+    right: 0.125rem; */
 
     display: flex;
     flex-direction: row;
     padding: var(--titlebar-padding);
-
+    justify-content: flex-end;
     background-color: transparent;
     z-index: 9000;
 
-    -webkit-app-region: no-drag;
+    -webkit-app-region: drag;
 }
 
 .titlebar > button {
+    right: 0em;
+    position: relative;
     cursor: pointer;
     width: var(--titlebar-icon-size);
     height: var(--titlebar-icon-size);
 
     transition: 250ms ease;
-
+    -webkit-app-region: no-drag;
     padding: 0;
     border: none;
     background: transparent;
