--- a/react-app/src/index.css
+++ b/react-app/src/index.css
@@ -17,6 +17,7 @@ body {
   height: 100vh;
   width: 100vw;
   display: flex;
+  flex-direction: column;
   justify-content: center;
   align-items: center;
   background-color: transparent;
