--- a/react-app/src/components/loginform.module.css
+++ b/react-app/src/components/loginform.module.css
@@ -55,8 +55,6 @@
     flex-direction: column;
     align-items: center;
     justify-content: flex-end;
-    margin: 6rem;
-    margin-bottom: 7rem;
     width: 22rem;
 }
 
@@ -133,6 +131,12 @@
 .right-section {
     padding-left: 2rem;
     padding-top: 2rem;
+    display: flex;
+    flex-direction: column;
+    justify-content: space-between;
+    align-items: center;
+    
+    position: relative;
 }
 
 .abstract-art {
@@ -140,166 +144,23 @@
     scale: 0.9;
 }
 
-/* -------------------------- */
-
-.content{
-    /* background-color: white; */
-    display: none;
-    width: 30em;
-    height: 32em;
-    position: relative;
-    /* border-radius: 1em; */
-    /* box-shadow: 0 0.0188em 1.550em rgb(156, 156, 156); */
+.security-key-status {
     display: flex;
-    flex-direction: column;
+    flex-direction: row;
     align-items: center;
-    justify-content: space-around;
-    -webkit-app-region: drag;
-}
-
-
-
-.altLogin {
-    width: 80%;
-    height: 3em;
-    display: flex;
-    justify-content: space-around; 
-    -webkit-app-region: no-drag;
-}
-
-.altLogin div{
-    width: 45%;
-    height: 80%;
-    border-radius: 0.25em;
-    background-color: #39c5bb;
-    background-position: center;
-    background-size: contain;
-    background-repeat: no-repeat;
-    transition: 1s;
-    cursor: pointer;
-    -webkit-app-region: no-drag;
-}
-.altLogin div:hover{
-    transform: scale(1.1);
-}
-
-.google{
-    background-image: url("../icon/google.png");
-    -webkit-app-region: no-drag;
-}
-.facebook{
-    background-image: url("../icon/facebook1.png");
-    -webkit-app-region: no-drag;
-}
-
-/* input { */
-/*     border: none; */
-/*     background-color: rgb(229,226,226); */
-/*     height: 4em; */
-/*     width: 80%; */
-/*     border-radius: 0.25em; */
-/*     text-align: center; */
-/*     padding: 2em; */
-/*     -webkit-app-region: no-drag; */
-/* } */
-/**/
-/* input:focus { */
-/*     outline-color: #39c5bb; */
-/* } */
-/**/
-.loginBtn {
-    width: 40%;
-    height: 2.5em;
-    background-color: #39c5bb;
-    display: flex;
-    justify-content: center;
-    align-items: center;
-    transition: 1s;
-    border-radius: 0.25em;
-    cursor: pointer;
-    -webkit-app-region: no-drag;
-}
-
-.loginBtn:hover {
-    transform: scale(1.1);
-}
-
-.signupText {
-    height: 1em;
-    font-size: .8em;
-    -webkit-app-region: no-drag;
-}
-
-.signupUrl{
-    color: black;
-    text-underline-position: under;
-}
-
-.text {
-    position: relative;
-    bottom: -1em;
-}
-.hide{
-    position: relative;
-    height: 0.5em;
-    transform: scale(0);
-}
-.loginPopup {
-    position: relative;
-    height: 0.5em;
-    display: flex;
-    flex-direction: column;
-    align-items: center;
-    justify-content: center;
-    border-radius: 0;
-    /* background-color: black; */
-    color: red;
+    padding: 1rem;
+    border-radius: 1rem;
+    background-color: #fff;
+    margin-left: 6rem;
+    color: #000;
+    box-shadow: 0 1px 3px 0 rgb(0 0 0 / 0.1), 0 1px 2px -1px rgb(0 0 0 / 0.1);
+    position: absolute;
     bottom: 0;
-    transform: scale(1);
-    transition: 0.3s;
 }
 
-.hide2{
-    position: relative;
-    height: 0.5em;
-    display: flex;
-    flex-direction: column;
-    align-items: center;
-    justify-content: center;
-    border-radius: 0;
-    opacity: 0;
-    transition: 0.3s;
+.security-key-status > .security-key-status-icon {
+    display: block;
+    height: 2rem;
+    width: 2rem;
+    margin-right: 1rem;
 }
-
-
-
-.failedText1{
-    font-size: 0.75em;
-}
-.failedText2{
-    font-size: 0.75em;
-}
-
-
-
-
-
-/* Define the fade-out animation */
-@keyframes fadeOut {
-    from {
-      opacity: 1;
-    }
-    to {
-      opacity: 0;
-    }
-  }
-  
-  /* Define the minimize animation */
-  @keyframes minimize {
-    from {
-      transform: scale(1);
-    }
-    to {
-      transform: scale(0);
-    }
-  }
