--- a/react-app/src/components/Titlebar.css
+++ b/react-app/src/components/Titlebar.css
@@ -2,15 +2,15 @@
     position: absolute;
     top: 0;
     right: 0;
-    top: 0;
-    right: 0.125rem;
+    
+    width:100%;
 
     display: flex;
     flex-direction: row;
     padding: var(--titlebar-padding);
-
+    justify-content: flex-end;
     background-color: transparent;
-    z-index: 9000;
+    z-index: 99999;
 
     -webkit-app-region: no-drag;
 
