--- a/react-app/src/pages/home.module.css
+++ b/react-app/src/pages/home.module.css
@@ -1,6 +1,16 @@
 .container {
     position: relative;
-    display: flex;   
+    display: flex;  
+    flex-direction: column;
+    width: 100%;
+    height: 100%;
+    -webkit-app-region: no-drag;
+}
+
+.content-wrapper{
+    position: relative;
+    display: flex;  
+    flex-direction: row;
     width: 100%;
     height: 100%;
     -webkit-app-region: no-drag;
