--- a/react-app/src/components/Titlebar.css
+++ b/react-app/src/components/Titlebar.css
@@ -12,7 +12,7 @@
     background-color: transparent;
     z-index: 99999;
 
-    -webkit-app-region: no-drag;
+    -webkit-app-region: drag;
 
     color: #000;
 }
@@ -25,7 +25,7 @@
     cursor: pointer;
     width: var(--titlebar-icon-size);
     height: var(--titlebar-icon-size);
-
+    -webkit-app-region: no-drag;
     transition: 250ms ease;
 
     padding: 0;
