--- a/react-app/src/index.css
+++ b/react-app/src/index.css
@@ -1,3 +1,18 @@
+@import "tailwindcss/base";
+@import "tailwindcss/components";
+@import "tailwindcss/utilities";
+
+@import "styles/fonts.css";
+
+@layer utilities {
+  .no-drag {
+    -webkit-app-region: no-drag;
+  }
+  .drag {
+    -webkit-app-region: drag;
+  }
+}
+
 html {
   --titlebar-padding: 0.5rem;
   --titlebar-icon-size: 1rem;
@@ -13,15 +28,15 @@ body {
   -moz-osx-font-smoothing: grayscale;
 }
 
-.container{
-  height: 100vh;
-  width: 100vw;
-  display: flex;
-  justify-content: center;
-  align-items: center;
-  background-color: transparent;
-  -webkit-app-region: no-drag;
+#root {
+  @apply w-[100vw] h-[100vh];
 }
+
+#app {
+  @apply w-[100vw] h-full;
+  @apply no-drag;
+}
+
 .cover{
   background-color: white;
   width: 100%;
@@ -50,67 +65,3 @@ body {
   -webkit-app-region: drag;
 }
 
-@keyframes fadeIn {
-from {
-  opacity: 0;
-}
-to {
-  opacity: 1;
-}
-}
-
-/* Define the fade-out animation */
-@keyframes fadeOut {
-from {
-  opacity: 1;
-}
-to {
-  opacity: 0;
-}
-}
-
-/* Define the minimize animation */
-@keyframes minimize {
-from {
-  transform: scale(1);
-}
-to {
-  transform: scale(0);
-}
-}
-
-#app{
-  align-items: center;
-  justify-content: center;
-  display: flex
-}
-
-code {
-  font-family: source-code-pro, Menlo, Monaco, Consolas, 'Courier New',
-    monospace;
-}
-
-/* inter-regular - latin_latin-ext */
-@font-face {
-  font-display: swap; /* Check https://developer.mozilla.org/en-US/docs/Web/CSS/@font-face/font-display for other options. */
-  font-family: 'Inter';
-  font-style: normal;
-  font-weight: 400;
-  src: url('fonts/inter-v12-latin_latin-ext-regular.woff2') format('woff2'); /* Chrome 36+, Opera 23+, Firefox 39+, Safari 12+, iOS 10+ */
-}
-/* inter-600 - latin_latin-ext */
-@font-face {
-  font-display: swap; /* Check https://developer.mozilla.org/en-US/docs/Web/CSS/@font-face/font-display for other options. */
-  font-family: 'Inter';
-  font-style: normal;
-  font-weight: 600;
-  src: url('fonts/inter-v12-latin_latin-ext-600.woff2') format('woff2'); /* Chrome 36+, Opera 23+, Firefox 39+, Safari 12+, iOS 10+ */
-}
-/* inter-900 - latin */
-@font-face {
-  font-display: swap; /* Check https://developer.mozilla.org/en-US/docs/Web/CSS/@font-face/font-display for other options. */
-  font-family: 'Inter';
-  font-style: normal;
-  font-weight: 900;
-  src: url('fonts/inter-v12-latin-900.woff2') format('woff2'); /* Chrome 36+, Opera 23+, Firefox 39+, Safari 12+, iOS 10+ */
-}
