--- a/react-app/src/components/Titlebar.css
+++ b/react-app/src/components/Titlebar.css
@@ -1,3 +1,8 @@
+.dev-menu button, .dev-menu input {
+    @apply border border-gray-500 p-1;
+    @apply rounded;
+}
+
 .titlebar {
     position: absolute;
     top: 0;
