--- a/react-app/src/pages/home.module.css
+++ b/react-app/src/pages/home.module.css
@@ -5,6 +5,8 @@
     width: 100%;
     height: 100%;
     -webkit-app-region: no-drag;
+
+    color: rgb(17, 38, 60);
 }
 
 .content-wrapper{
@@ -15,7 +17,6 @@
     height: 100%;
     -webkit-app-region: no-drag;
 }
-
 
 .feature-list-aside {
     display: flex;
@@ -34,14 +35,49 @@
     -webkit-app-region: no-drag;
 }
 
-.application-title {
-    margin: 1rem 0;
-    text-align: left;
-    font-weight: bold;
+.org-name-wrapper {
+    @apply w-full;
+    @apply flex items-center justify-between;
+}
+
+.org-title-wrapper {
+    @apply flex items-center;
+    @apply gap-3;
+}
+
+.org-name-wrapper .org-avatar {
+    @apply rounded-xl;
+    @apply h-12 w-12;
+    @apply bg-gray-200;
+}
+
+.org-name-wrapper .org-name {
+    @apply font-semibold;
+    @apply text-lg;
+}
+
+.org-name-wrapper .aside-collapse {
+    @apply no-drag;
+
+    @apply h-8 w-8;
+    @apply p-2;
+    @apply rounded-lg;
+    @apply transition duration-100;
+
+    @apply hover:bg-gray-200;
+    @apply focus:ring focus:ring-gray-100;
+}
+
+.aside-devider {
+    @apply h-[2px];
+    @apply my-4;
+
+    background: linear-gradient(90deg, rgba(255,255,255,0) 0%, rgba(0,0,0,.03) 50%, rgba(255,255,255,0) 100%);
 }
 
 .feature-list {
     padding: 0;
+    @apply space-y-2;
 }
 
 .feature-list, .feature-list > li, .feature-list > li > button {
@@ -49,8 +85,7 @@
 }
 
 .feature-list > li > button {
-    border: none;
-    border-radius: 0.5rem;
+    @apply rounded-2xl;
     background: transparent;
     transition: 250ms;
 }
@@ -63,10 +98,6 @@
     background-color: #39c5bb;
     /* background: #2563eb; */
     color: #fff;
-}
-
-.feature-list > * + * {
-    margin-top: 0.125rem;
 }
 
 .feature-list > li > button {
@@ -158,9 +189,6 @@
     flex-direction: column;
     
 }
-
-
-
 
 .section-page-header {
     z-index: 1;
